# FastInterCU-VVC

./: README.md
vtm-mlt-cpp/: CMakeLists.txt  COPYING  Makefile  README.md
vtm-mlt-cpp/cfg/: encoder_randomaccess_vtm.cfg  encoder_randomaccess_vtm_gop16.cfg
vtm-mlt-cpp/cfg/444/: yuv444.cfg
vtm-mlt-cpp/cfg/CacheCfg/: cache_1d.cfg  cache_2d.cfg
vtm-mlt-cpp/cfg/field/: VTM_encoder_lowdelay_field_GOP16.cfg  VTM_encoder_lowdelay_field_GOP8.cfg  VTM_encoder_randomaccess_field_GOP16.cfg  VTM_encoder_randomaccess_field_GOP32.cfg
vtm-mlt-cpp/cfg/hbd/: 12-bit.cfg  16-bit.cfg  hbd.cfg
vtm-mlt-cpp/cfg/lossless/: lossless.cfg  lossless444.cfg  losslessRGB.cfg  lossless_mixed.cfg
vtm-mlt-cpp/cfg/multi-layer/: two_layers.cfg  two_layers_ELonlyILP.cfg  two_layers_max_tid_ref_pic.cfg
vtm-mlt-cpp/cfg/partitioning/: BasketballDrillText_subpicture_4_slice_2_hor_subpic.cfg  entropy_coding_synchronization.cfg  raster_slice.cfg  raster_slice_1_slice_per_tile.cfg  rect_slice_classB.cfg  rect_slice_fixed_size.cfg  rpr_no_subpic_single_slice_per_subpic.cfg  subpicture_3_slice_2_tile.cfg  subpicture_3_slice_2_tile_1_slice_per_subpic.cfg  subpicture_4_slice_2_hor_subpic.cfg  subpicture_4_slice_2_hor_subpic_same_size_flag.cfg  subpicture_4_slice_2_tiles_4_subpic.cfg  subpicture_4_slice_2_ver_subpic.cfg  subpicture_8_slice_12_tile_2_subpic.cfg
vtm-mlt-cpp/cfg/per-class/: classF.cfg  classH1.cfg  classH2.cfg  classSCC.cfg  formatRGB.cfg
vtm-mlt-cpp/cfg/per-sequence/: FoodMarket4.cfg  MarketPlace.cfg  ParkRunning3.cfg  RitualDance.cfg
vtm-mlt-cpp/cfg/per-sequence-HBD/: CrowdRun_RGB_16bit.cfg  DucksTakeOff_RGB_16bit.cfg  H1_BalloonFestival_422_12bit.cfg  H1_BalloonFestival_444_12bit.cfg  H1_FireEater2_422_12bit.cfg  H1_FireEater2_444_12bit.cfg  H1_Hurdles_422_12bit.cfg  H1_Hurdles_444_12bit.cfg  H1_Market3_422_12bit.cfg  H1_Market3_444_12bit.cfg  H1_Starting_422_12bit.cfg  H1_Starting_444_12bit.cfg  H2_DayStreet_422_12bit.cfg  H2_DayStreet_444_12bit.cfg  H2_NightStreet_422_12bit.cfg  H2_NightStreet_444_12bit.cfg  H2_PeopleInShoppingCenter_422_12bit.cfg  H2_PeopleInShoppingCenter_444_12bit.cfg  H2_StainedGlass_422_12bit.cfg  H2_StainedGlass_444_12bit.cfg  InToTree_RGB_16bit.cfg  OldTownCross_RGB_16bit.cfg  ParkJoy_RGB_16bit.cfg
vtm-mlt-cpp/cfg/per-sequence-HDR/: H1_BalloonFestival.cfg  H1_Cosmos1_TreeTrunk.cfg  H1_EBU_Hurdles.cfg  H1_EBU_Starting.cfg  H1_Market.cfg  H1_ShowGirl.cfg  H1_SunRise.cfg  H2_DayStreet2.cfg  H2_FlyingBirds3.cfg  H2_PeopleInShoppingCenter2.cfg  H2_SunsetBeach3.cfg
vtm-mlt-cpp/cfg/per-sequence-non-420/: ArenaOfValor_444.cfg  ArenaOfValor_RGB.cfg  BirdsInCage_444_10bit.cfg  ChineseEditing_444.cfg  ChineseEditing_RGB.cfg  CrowdRun_444_10bit.cfg  DucksAndLegs_RGB_10bit.cfg  EBUGraphics_422_10bit.cfg  EBUHorse_422_10bit.cfg  EBUKidsSoccer_422_10bit.cfg  EBULupoCandlelight_444_10bit.cfg  EBULupoCandlelight_RGB_10bit.cfg  EBURainFruits_444_10bit.cfg  EBURainFruits_RGB_10bit.cfg  EBUWaterRocksClose_422_10bit.cfg  FlyingGraphics_444.cfg  FlyingGraphics_RGB.cfg  GlassHalf_444_10bit.cfg  GlassHalf_RGB.cfg  OldTownCross_RGB_10bit.cfg  Seeking_422_10bit.cfg  VenueVu_444_10bit.cfg  VenueVu_RGB.cfg
vtm-mlt-cpp/cfg/rpr/: scale1.5x.cfg  scale2.0x.cfg
vtm-mlt-cpp/cfg/scaling_list/: sample_scaling_list.cfg  sample_scaling_list_file.txt
vtm-mlt-cpp/cfg/sei_vui/: alternative_transfer_characteristics.cfg  ambient_viewing_environment.cfg  content_light_level.cfg  film_grain_characterstics.cfg  frame_packing.cfg  generalized_cubemap_projection.cfg  mastering_display_colour_volume.cfg  parameter_sets_inclusion_indication.cfg  sample_aspect_ratio.cfg  subpicture_level.cfg  timing.cfg  vui_HD.cfg  vui_UHD_PQ.cfg
vtm-mlt-cpp/cmake/CMakeBuild/lldb/: CMakeBuildLldbExt.py  CMakeLists.txt  lldbinit-CMakeBuild.in
vtm-mlt-cpp/doc/: .gitignore  DTrace for NextSoftware.docx  Doxyfile  Makefile  NextSoftware-CommonModel.emf  NextSoftware-CommonModel.vsd  NextSoftware-Data Structures.pptx  jvetdoc.cls  mainpage.h  software-manual.tex
vtm-mlt-cpp/lldb/: CMakeLists.txt  NextSoftware.py  lldbinit-NextSoftware.in  lldbinit_update-in.cmake
vtm-mlt-cpp/python/: dec_script.py  dec_stats_script.py  enc_script.py  enc_script_LD.py
vtm-mlt-cpp/script_128/: ArenaOfValor_enc_60.sh  BQMall_enc_60.sh  BQSquare_enc_60.sh  BQTerrace_enc_60.sh  BasketballDrillText_enc_50.sh  BasketballDrill_enc_50.sh  BasketballDrive_enc_50.sh  BasketballPass_enc_50.sh  BlowingBubbles_enc_50.sh  Cactus_enc_50.sh  Campfire_enc_30.sh  CatRobot_enc_60.sh  DaylightRoad2_enc_60.sh  FoodMarket4_enc_60.sh  MarketPlace_enc_60.sh  ParkRunning3_enc_50.sh  PartyScene_enc_50.sh  RaceHorsesC_enc_30.sh  RaceHorses_enc_30.sh  RitualDance_enc_60.sh  SlideEditing_enc_30.sh  SlideShow_enc_20.sh  Tango2_enc_60.sh
vtm-mlt-cpp/script_128/archive/: FourPeople_enc_60.sh  Johnny_enc_60.sh  KristenAndSara_enc_60.sh
vtm-mlt-cpp/source/App/BitstreamExtractorApp/: BitstreamExtractorApp.cpp  BitstreamExtractorApp.h  BitstreamExtractorAppCfg.cpp  BitstreamExtractorAppCfg.h  CMakeLists.txt  bitstreamextractormain.cpp
vtm-mlt-cpp/source/App/DecoderAnalyserApp/: CMakeLists.txt
vtm-mlt-cpp/source/App/DecoderApp/: CMakeLists.txt  DecApp.cpp  DecApp.h  DecAppCfg.cpp  DecAppCfg.h  decmain.cpp
vtm-mlt-cpp/source/App/EncoderApp/: CMakeLists.txt  EncApp.cpp  EncApp.h  EncAppCfg.cpp  EncAppCfg.h  encmain.cpp
vtm-mlt-cpp/source/App/Parcat/: CMakeLists.txt  parcat.cpp  readme.md
vtm-mlt-cpp/source/App/SEIRemovalApp/: CMakeLists.txt  SEIRemovalApp.cpp  SEIRemovalApp.h  SEIRemovalAppCfg.cpp  SEIRemovalAppCfg.h  seiremovalmain.cpp
vtm-mlt-cpp/source/App/StreamMergeApp/: CMakeLists.txt  StreamMergeApp.cpp  StreamMergeApp.h  StreamMergeAppCfg.cpp  StreamMergeAppCfg.h  StreamMergeMain.cpp
vtm-mlt-cpp/source/App/SubpicMergeApp/: CMakeLists.txt  SubpicMergeApp.cpp  SubpicMergeApp.h  SubpicMergeMain.cpp  SubpicconfSample.txt
vtm-mlt-cpp/source/App/utils/: annexBbytecount.cpp  convert_NtoMbit_YCbCr.cpp
vtm-mlt-cpp/source/Lib/CommonAnalyserLib/: CMakeLists.txt
vtm-mlt-cpp/source/Lib/CommonLib/: AdaptiveLoopFilter.cpp  AdaptiveLoopFilter.h  BitStream.h  (+93 more)
(+146 files in other folders)
